# openai-responses

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
src/openai_responses/api/: api_server.py  events.py  serve.py  types.py
src/openai_responses/api/inference/: metal.py  ollama.py  stub.py  transformers.py  triton.py  vllm.py
src/openai_responses/tools/: tool.py
src/openai_responses/tools/simple_browser/: __init__.py  backend.py  simple_browser_tool.py
src/openai_responses/tools/simple_web_search/: __init__.py  backend.py  page_contents.py  simple_web_search_tool.py
tests/: test_api_server.py  test_ollama_inference.py
