[project]
name = "openai-responses"
version = "0.1.0"
description = "Modified reference implementation of OpenAI responses server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.5.5",
    "gpt-oss>=0.0.4",
    "ollama>=0.5.3",
    "openai-harmony>=0.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[project.scripts]
responses_api = "openai_responses.api.serve:main"
